# storage/model/key_value.go
@@ -11,14 +11,15 @@ const (
 	KeyValueScopeSubordinateStatement = "subordinate_statement"
 	KeyValueScopeSigning              = "signing"
 
-	KeyValueKeyLifetime       = "lifetime"
-	KeyValueKeyMetadataPolicy = "metadata_policy"
-	KeyValueKeyMetadata       = "metadata"
-	KeyValueKeyConstraints    = "constraints"
-	KeyValueKeyCriticalClaims = "crit"
-	KeyValueKeyAlg            = "alg"
-	KeyValueKeyRSAKeyLen      = "rsa_key_len"
-	KeyValueKeyKeyRotation    = "key_rotation"
+	KeyValueKeyLifetime         = "lifetime"
+	KeyValueKeyMetadataPolicy   = "metadata_policy"
+	KeyValueKeyMetadata         = "metadata"
+	KeyValueKeyConstraints      = "constraints"
+	KeyValueKeyCriticalClaims   = "crit"
+	KeyValueKeyAlg              = "alg"
+	KeyValueKeyRSAKeyLen        = "rsa_key_len"
+	KeyValueKeyKeyRotation      = "key_rotation"
+	KeyValueKeyAdditionalClaims = "additional_claims"
 )
 
 // KeyValue stores arbitrary key-value data.
